--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 		<link rel="icon" type="image/png" href="/favicon.png" />
 
 		<link
@@ -11,7 +13,27 @@
 			rel="stylesheet"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Cassia Bernardo</title>
+
+		<!-- SEO Básico -->
+		<title>Cassia Bernardo - Full Stack Developer | React, Node.js</title>
+		<meta name="description" content="Full Stack Developer specialized in React, Next.js, TypeScript, Node.js, and PostgreSQL. Browse my projects and contact me for opportunities." />		<meta name="keywords" content="react, nodejs, javascript, portfolio, full stack" />
+		<meta name="author" content="Cassia Bernardo" />
+  
+		<!-- Open Graph (Facebook, LinkedIn) -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.cassiabernardo.com" />
+		<meta property="og:title" content="Cassia Bernardo - Full Stack Developer" />
+		<meta property="og:description" content="Full Stack Developer specialized in React, Next.js, TypeScript, Node.js, and PostgreSQL" />
+		<meta property="og:image" content="https://www.cassiabernardo.com/girl-coding.png" />
+		
+		<!-- Twitter Card -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Cassia Bernardo - Full Stack Developer" />
+		<meta name="twitter:description" content="Full Stack Developer specialized in React, Next.js, TypeScript, Node.js, and PostgreSQL" />
+		<meta name="twitter:image" content="https://www.cassiabernardo.com/girl-coding.png" />
+		
+		<!-- Canonical URL -->
+		<link rel="canonical" href="https://www.cassiabernardo.com" />
 	</head>
 	<body>
 		<div id="root"></div>
