--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<link rel="icon" type="image/png" href="/favicon.png" />
-
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap"
 			rel="stylesheet"
 		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<link rel="icon" type="image/png" href="/favicon.png" />
+		
 
 		<!-- SEO Básico -->
 		<title>Cassia Bernardo - Full Stack Developer | React, Node.js</title>
-		<meta name="description" content="Full Stack Developer specialized in React, Next.js, TypeScript, Node.js, and PostgreSQL. Browse my projects and contact me for opportunities." />		<meta name="keywords" content="react, nodejs, javascript, portfolio, full stack" />
+		<meta name="description" content="Full Stack Developer in Bucharest specialized in React, Next.js, TypeScript, Node.js, and PostgreSQL. Browse my projects and contact me for opportunities." />		
 		<meta name="author" content="Cassia Bernardo" />
   
 		<!-- Open Graph (Facebook, LinkedIn) -->
